--- a/build.gradle
+++ b/build.gradle
@@ -16,11 +16,19 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+
+    //implementation 'org.springframework.session:spring-session-data-redis'
+    //implementation 'org.springframework.session:spring-boot-starter-data-redis'
     runtimeOnly 'org.postgresql:postgresql'
-    
+
+    //compile 'redis.clients:jedis:3.6.3'
+
     compile 'org.reflections:reflections:0.9.12'
     compile 'org.apache.commons:commons-lang3:3.0'
 
+    compileOnly 'org.projectlombok:lombok:1.18.22'
+    annotationProcessor 'org.projectlombok:lombok:1.18.22'
+    
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
 }
