--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,22 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto=create-drop
+
+
+//server.servlet.session.timeout=60s
+
+# Session store type.
+#spring.session.store-type=redis
+# Session timeout. If a duration suffix is not specified, seconds is used.
+#server.servlet.session.timeout=1m
+# Sessions flush mode.
+#spring.session.redis.flush-mode=on_save
+# Namespace for keys used to store sessions
+#spring.session.redis.namespace=spring:session
+
+# Redis server host.
+#spring.redis.host=localhost
+# Login password of the redis server.
+#spring.redis.password=
+# Redis server port.
+#spring.redis.port=6379
