feat: Added transactions

--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,23 @@ repositories {
     mavenCentral()
 }
 
+sourceSets {
+    main {
+        java.srcDir 'src/main/java'
+        resources.srcDir "src/main/resources"
+        
+    }
+    test {
+        java.srcDir 'src/test/java'
+        compileClasspath += main.output
+        runtimeClasspath += main.output
+    }
+//    manual {
+//        java.srcDir 'src/manual/java'
+//        resources.srcDir 'src/manual/resources'
+//    }
+}
+
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-security'
