--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
 
 
-//server.servlet.session.timeout=60s
+#server.servlet.session.timeout=60s
 
 # Session store type.
 #spring.session.store-type=redis
