--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,9 @@ dependencies {
     compile 'org.reflections:reflections:0.9.12'
     compile 'org.apache.commons:commons-lang3:3.0'
 
+    // https://mvnrepository.com/artifact/org.json/json
+    implementation group: 'org.json', name: 'json', version: '20210307'
+
     compileOnly 'org.projectlombok:lombok:1.18.22'
     annotationProcessor 'org.projectlombok:lombok:1.18.22'
     
