--- a/build.gradle
+++ b/build.gradle
@@ -31,18 +31,14 @@ sourceSets {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-web'
 
-    //implementation 'org.springframework.session:spring-session-data-redis'
-    //implementation 'org.springframework.session:spring-boot-starter-data-redis'
     runtimeOnly 'org.postgresql:postgresql'
-
-    //compile 'redis.clients:jedis:3.6.3'
-
+    
     compile 'org.reflections:reflections:0.9.12'
     compile 'org.apache.commons:commons-lang3:3.0'
-
+    implementation 'com.google.guava:guava:30.1.1-jre'
+    
     // https://mvnrepository.com/artifact/org.json/json
     implementation group: 'org.json', name: 'json', version: '20210307'
 
